[package]
name = "todo_police"
version = "0.1.0"
edition = "2021"
license = "MIT"
descrition = "Todo comment aggregator"
homepage = "https://github.com/raulescobar-g/rust_todo_tool"
documentation = "https://github.com/raulescobar-g/rust_todo_tool"
repository = "https://github.com/raulescobar-g/rust_todo_tool"
readme = "README.MD"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
prettytable-rs = "^0.8"
colored = "2"
indicatif = "*"
comment-parser = "0.1"
clap = "~2.27.0"
chrono = "*"
